latest as of nov 9

--- a/survival_analysis_v5_SF.ipynb
+++ b/survival_analysis_v5_SF.ipynb
@@ -756,6 +756,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "listings_df.to_csv('sf_listings_TE.csv',header=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false
@@ -3288,10 +3299,11 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python [Root]",
    "language": "python",
-   "name": "python2"
+   "name": "Python [Root]"
   },
   "language_info": {
    "codemirror_mode": {
